Fixed a CSS issue on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -1172,11 +1172,8 @@ body{
     .projects-links{
         font-size: 1em;
     }
-    .projects-tags2, .projects-tags3{
-        margin-bottom: -30px;
-    }
     .projects-tags3{
-        width: 70%;
+        width: 100%;
     }
 }
 /* iPhone SE */
